export enum StateValue {
  INITIAL,
  IN_GAME,
  RESUME,
  EXIT
}
